fix on iphone not scrolling to the end

--- a/app/javascript/application/stylesheets/responsive_smartphone_portrait.css
+++ b/app/javascript/application/stylesheets/responsive_smartphone_portrait.css
@@ -529,7 +529,7 @@
 
 	#completion-reports-container {
 		margin-left: 0px;
-		margin-bottom: 120px;
+		margin-bottom: 200px;
 		margin-top: 10px;
 	}
 
